after adding passport_1

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -177,12 +177,12 @@ html.loading(lang='en', data-textdirection='rtl', xmlns='http://www.w3.org/1999/
                         span.menu-title(data-i18n='nav.page_layouts.main') Packages
                     ul.menu-content
                         li
-                            a.menu-item(href='list-pack.html', data-i18n='nav.page_layouts.1_column')
+                            a.menu-item(href='list-pack', data-i18n='nav.page_layouts.1_column')
                                 | All
                                 | package
                                 span.icon-list(style='padding-left: 10px')
                         li
-                            a.menu-item(href='add-pack.html', data-i18n='nav.page_layouts.2_columns')
+                            a.menu-item(href='add-pack', data-i18n='nav.page_layouts.2_columns')
                                 | Add
                                 | package
                                 span.icon-cube2(style='padding-left: 10px')
@@ -192,12 +192,12 @@ html.loading(lang='en', data-textdirection='rtl', xmlns='http://www.w3.org/1999/
                         span.menu-title(data-i18n='nav.page_layouts.main') Users
                     ul.menu-content
                         li
-                            a.menu-item(href='list-user.html', data-i18n='nav.page_layouts.1_column')
+                            a.menu-item(href='list-user', data-i18n='nav.page_layouts.1_column')
                                 | All
                                 | Users
                                 span.icon-list(style='padding-left: 10px')
                         li
-                            a.menu-item(href='add-user.html', data-i18n='nav.page_layouts.2_columns')
+                            a.menu-item(href='add-user', data-i18n='nav.page_layouts.2_columns')
                                 | Add
                                 | User
                                 span.icon-user-plus(style='padding-left: 10px')
