--- a/views/layout.pug
+++ b/views/layout.pug
@@ -202,7 +202,7 @@ html.loading(lang='en', data-textdirection='rtl', xmlns='http://www.w3.org/1999/
                                 | User
                                 span.icon-user-plus(style='padding-left: 10px')
                 li.nav-item
-                    a(href='logs.html')
+                    a(href='logs')
                         i.icon-stats-dots
                         span.menu-title(data-i18n='nav.dash.main') Logs
                 hr
